# Quadtree-image-compression

./: .gitignore  CMakeLists.txt  README.md
include/: Image.hpp  Quadtree.hpp
src/: Image.cpp  Quadtree.cpp  main.cpp
tests/: test_main.cpp
tests/images/: flower2.qtc  wecs.qtc
